[package]
name = "jsongrep"
version = "0.9.0"
authors = ["Micah Kepe <micahkepe@gmail.com>"]
edition = "2024"
readme = "README.md"
license = "MIT"
repository = "https://github.com/micahkepe/jsongrep"
homepage = "https://github.com/micahkepe/jsongrep"
description = "JSONPath-inspired query language for JSON, YAML, TOML, and other serialization formats"
keywords = ["json", "grep", "search", "pattern"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
  ".github/",
  "examples/",
  "images/",
  "benches/",
  "tests/",
  "justfile",
  ".gitmodules",
  "playground"
]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
env_logger = "0.11.8"
log = "0.4.27"
pest = "2.8.1"
pest_derive = "2.8.1"
serde = { version = "1.0.219", features = ["derive", "rc"]}
serde_json = "1.0.142"
serde_json_borrow = "0.9.0"
clap_mangen = "0.2.29"
clap_complete = "4.5.57"
regex = "1.12.2"
memmap2 = "0.9.9"
colored = "3.1.1"
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
ciborium = { version = "0.2", optional = true }
rmp-serde = { version = "1", optional = true }

[features]
default = ["all-formats"]
yaml = ["dep:serde_yaml"]
toml = ["dep:toml"]
cbor = ["dep:ciborium"]
msgpack = ["dep:rmp-serde"]
all-formats = ["yaml", "toml", "cbor", "msgpack"]

[lints.clippy]
# See: <https://rust-lang.github.io/rust-clippy/master/index.html.
pedantic = { level = "warn" }
nursery = { level = "warn", priority = -1 }
doc_paragraphs_missing_punctuation = { level = "warn"}
allow_attributes = "warn"

[dev-dependencies]
assert_cmd = "2.0"
criterion = { version = "0.8.2", features = ["html_reports"] }
jsonpath-rust = "1.0"
jmespath = "0.5"
jaq-core = "2"
jaq-std = "2"
jaq-json = { version = "1", features = ["serde_json"] }
jql-parser = "8.1.2"
jql-runner = "8.1.2"
tempfile = "3.27.0"
ciborium = "0.2.2"
rmp-serde = "1.3.1"
proptest = "1.11.0"

[[bin]]
path = "src/main.rs"
name = "jg"

[[test]]
name = "cli"
path = "tests/cli.rs"

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "query"
harness = false

